# CLI-predictor

./: .flake8  .gitignore  .pre-commit-config.yaml  README.md  main.py  prediction.py  pyproject.toml
data/cpu/: forecast.csv  test_data.csv
